Add ships and reduce ADSB radius

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "dependencies": {
     "node-fetch": "^3.3.2",
-    "gtfs-realtime-bindings": "^1.1.1"
+    "gtfs-realtime-bindings": "^1.1.1",
+    "ws": "^8.18.3"
   }
 }
