Revert "Add ships and reduce ADSB radius"
This reverts commit 7c77d4a97b92b4f20e056b5ccc61fff1f76cd311.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "type": "module",
   "dependencies": {
     "node-fetch": "^3.3.2",
-    "gtfs-realtime-bindings": "^1.1.1",
-    "ws": "^8.18.3"
+    "gtfs-realtime-bindings": "^1.1.1"
   }
 }
